--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,11 @@
         <version>1.5.5.Final</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.wiremock</groupId>
+        <artifactId>wiremock-standalone</artifactId>
+        <version>3.0.1</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
